tests/paczka1/small_fuzzy/33235789.err
Error in line 7: g1Jexz9xbm A149 48,4
Error in line 13: g1Jexz9xbm A985 2o,6
Error in line 9: g1Jexz9xbm S955 77,5
